Bug 1665343 - Remove blob specialness in image cache. r=tnikkel

We use it to merge blobs, but that doesn't match the spec. Per:

  https://html.spec.whatwg.org/#the-list-of-available-images

We should key off the URI, and thus a revoked image should be able to be
reused if the request is cached. This works to allow printing revoked
blob images, which other browsers allow.

I don't see any way to make that work easily while preserving the blob
image optimization. That being said, it seems other browsers also
re-decode when creating different URLs for the same blob (see the
test-case attached to the bug), so it seems we should be able to live
without it.

Differential Revision: https://phabricator.services.mozilla.com/D90544